# mat

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt  create_dmg_macos.py  create_installer_windows.py  main.cpp  mat.wxs  matapp_component.plist
lib/: CMakeLists.txt  cgcustommath.cpp  cgcustommath.h
